[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["Zain Babar <zainibaba1990@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
